# orchid

./: .env.example  .gitignore  .mcp.json  .orchid.yaml  CHANGELOG.md  CLAUDE.md  CODE-ANALYSIS-2026-05-08.md  GAP-CLOSURE-REPORT.md  HANDOFF-archive-2026-05-09-1200.md  HANDOFF-archive-2026-05-29-1043.md  HANDOFF.md  HEALTH-REPORT.md  Orchid-v-Claude-Code-Gap_analysis.md  README.md  REVIEW.md  TIER1-REPORT.md  TIER2-REPORT.md  TIER3-REPORT.md  TIER4-REPORT.md  V2-SUMMARY.md  codeindex.json  next-phases.md  next_tasks copy.md  next_tasks.md  orchid.config.yaml  phase_1_tasks.md  phase_2_tasks.md  phase_3_tasks.md  phase_4_tasks.md  phase_5_tasks.md  phase_6_tasks.md  phase_7_tasks.md  pyproject.toml  repo-viz-orchid.html  symbolindex.json  tasks.md  test_simple.py  tier-1-tasks.md  tier-2-tasks.md  tier-3-tasks.md  (+2 more)
.claude/: settings.local.json
.codeindex/: index.db
.orchid/: decisions.json  task_results.json
css/: dice-faces.css
docs/: DEVELOPMENT-CONTEXT.md  Orchid vs Agentic OS.md  agentic-os-analysis.md  auth-multiuser-plan.md  auth-store-backends.md  cli-auth-plan.md  gap-closure-plan.md  getting-started.md  hook-security-review.md  hooks-review.md  migration-v2.2-to-v2.3.md  mobile-responsive-plan.md  multiuser-proposal.md  multiuser-review.md  next-features-plan.md  pm-guide.md  qa-test-plan.md  soc-v2.4.md
js/: dice.js
memory/: CODE_INDEX.md  MEMORY.md  feedback_code_index.md
orchid/: __init__.py  agent_manager.py  agent_pool.py  agent_registry.py  capability.py  cli.py  config.py  container_runner.py  discovery.py  discussion.py  errors.py  gates.py  lifecycle.py  locks.py  machine_profile.py  mailbox.py  multi.py  orchestrator.py  orchid.defaults.yaml  planning.py  project_creator.py  runner.py  scheduler.py  session.py  shutdown.py  subprocess_runner.py  watchdog.py  worker_protocol.py  worker_subprocess.py  worktree.py
reviews/: checkpoint_store_review.md
scripts/: deploy.sh  install-orchid-serve.sh  orchid-multi.service.template  orchid-serve.service  orchid-serve.service.template  orchid-slack.service.template  orchid-telegram.service.template  orchid-web.service.template  start_session.sh  traefik-orchid.yml  trim_done_tasks.py
src/: __init__.py  main.py  second_task.py  utils.py
tests/: __init__.py  conftest.py  test_admin_api.py  test_agent_cancel.py  test_agent_permissions.py  test_agent_pool.py  test_agent_registry.py  test_allow_user_projects.py  test_auth.py  test_budget.py  test_caching.py  test_capability.py  test_central_bots.py  test_checkpoint_integration.py  test_checkpoint_restore.py  test_checkpoint_schema.py  test_checkpoint_store.py  test_circuit_breaker.py  test_cli_decide.py  test_config.py  test_container_runner.py  test_cost_ledger.py  test_cost_scheduler.py  test_cpu_accounting.py  test_cron_api.py  test_cron_engine.py  test_cron_executor.py  test_gates.py  (+78 more)
(+211 files in other folders)
