[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchid"
version = "0.1.0"
description = "AI agent orchestration framework for persistent bare-metal deployment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "aiofiles>=23.2.1",
    "tenacity>=8.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
orchid = "orchid.interfaces.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["orchid"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["network: tests that require real network access"]
